--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
   },
   "author": "",
   "license": "ISC",
-  "engines" : { "node" : ">=4.0.0" },
+  "engines": {
+    "node": ">=4.0.0"
+  },
   "devDependencies": {
     "autobind-decorator": "1.3.3",
-    "babel": "5.8.23",
-    "babelify": "6.4.0",
+    "babel": "^6.5.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-1": "^6.5.0",
+    "babelify": "^7.3.0",
     "browser-sync": "2.14.0",
     "browserify": "13.1.0",
     "connect-history-api-fallback": "1.2.0",
@@ -22,20 +28,20 @@
     "gulp-notify": "2.2.0",
     "gulp-rename": "1.2.2",
     "gulp-stylus": "2.5.0",
-    "gulp-uglify": "1.5.4",
+    "gulp-uglify": "^2.0.0",
     "gulp-util": "3.0.7",
     "history": "3.0.0",
     "install": "0.8.1",
+    "jquery": "3.1.0",
     "re-base": "1.5.1",
     "react": "^15.3.0",
     "react-addons-css-transition-group": "^15.3.0",
-    "react-dom": "^15.3.0",
     "react-catalyst": "0.3.1",
+    "react-dom": "^15.3.0",
     "react-mixin": "3.0.5",
     "react-router": "2.6.1",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
-    "watchify": "3.7.0",
-    "jquery": "3.1.0"
+    "watchify": "3.7.0"
   }
 }
