--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "babelify": "^7.3.0",
     "browser-sync": "2.14.0",
     "browserify": "13.1.0",
-    "connect-history-api-fallback": "1.2.0",
+    "connect-history-api-fallback": "^1.3.0",
     "firebase": "3.2.1",
     "gulp": "3.9.1",
     "gulp-autoprefixer": "3.1.0",
@@ -30,15 +30,10 @@
     "gulp-stylus": "2.5.0",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "3.0.7",
-    "history": "3.0.0",
-    "install": "0.8.1",
-    "jquery": "3.1.0",
     "re-base": "1.5.1",
     "react": "^15.3.0",
     "react-addons-css-transition-group": "^15.3.0",
-    "react-catalyst": "0.3.1",
     "react-dom": "^15.3.0",
-    "react-mixin": "3.0.5",
     "react-router": "2.6.1",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
